@@ -20,6 +20,7 @@ import com.azure.core.util.BinaryData;
 import com.azure.core.util.Configuration;
 
 import java.util.Arrays;
+import java.util.List;
 import java.util.function.BiConsumer;
 import java.util.function.Consumer;
 
@@ -100,7 +101,7 @@ public abstract class AssistantsClientTestBase extends TestProxyTestBase {
         testRunner.accept(new AssistantCreationOptions(GPT_4_1106_PREVIEW)
                 .setName("Math Tutor")
                 .setInstructions("You are a personal math tutor. Answer questions briefly, in a sentence or less.")
-                .setTools(Arrays.asList(new CodeInterpreterToolDefinition()))
+                .setTools(List.of(new CodeInterpreterToolDefinition()))
         );
     }
 
@@ -110,13 +111,13 @@ public abstract class AssistantsClientTestBase extends TestProxyTestBase {
         testRunner.accept(new AssistantCreationOptions(GPT_4_1106_PREVIEW)
                         .setName("Math Tutor")
                         .setInstructions("You are a personal math tutor. Answer questions briefly, in a sentence or less.")
-                        .setTools(Arrays.asList(new CodeInterpreterToolDefinition()))
+                        .setTools(List.of(new CodeInterpreterToolDefinition()))
                 , fileId);
     }
 
     void createThreadRunner(Consumer<AssistantThreadCreationOptions> testRunner) {
         testRunner.accept(new AssistantThreadCreationOptions()
-                .setMessages(Arrays.asList(new ThreadInitializationMessage(MessageRole.USER,
+                .setMessages(List.of(new ThreadInitializationMessage(MessageRole.USER,
                         "I need to solve the equation `3x + 11 = 14`. Can you help me?"))));
     }
 
@@ -132,7 +133,7 @@ public abstract class AssistantsClientTestBase extends TestProxyTestBase {
         testRunner.accept(
                 new CreateAndRunThreadOptions(assistantId)
                         .setThread(new AssistantThreadCreationOptions()
-                                .setMessages(Arrays.asList(new ThreadInitializationMessage(MessageRole.USER,
+                                .setMessages(List.of(new ThreadInitializationMessage(MessageRole.USER,
                                         "I need to solve the equation `3x + 11 = 14`. Can you help me?")))));
 
     }
